Fixed layout of video preview (issue #454). Fixed truncation of video and audio at the end. Made dialog in single-column mode expand to the bottom of screen.

--- a/client/src/application.scss
+++ b/client/src/application.scss
@@ -89,6 +89,14 @@ body {
     }
 }
 
+.single-col {
+    .overlay {
+        .foreground {
+            height: 100%;
+        }
+    }
+}
+
 SELECT {
     border-radius: 0;
     background-color: #eeeeee;
