--- a/client/src/dialogs/audio-capture-dialog-box-browser.scss
+++ b/client/src/dialogs/audio-capture-dialog-box-browser.scss
@@ -50,6 +50,10 @@
             padding-left: 0;
             padding-right: 0;
         }
+
+        AUDIO {
+            width: 100%;
+        }
     }
 
     .controls {
